# bad-apple-embedded-rs

./: .gitignore  Cargo.toml  Embed.toml  README.org  video-to-ascii.py
.cargo/: config
assets/: ascii.txt  gen.txt
bad-apple-embedded/src/: main.rs
src/: main.rs
video-to-ascii/: Cargo.toml
video-to-ascii/src/: main.rs
