[package]
name = "bad-apple-embedded-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.1", features = ["device"]  }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xe"] }
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
embedded-time = "0.12.1"